# umrah_haji_backend

./: .dockerignore  Cargo.toml  dockerfile
src/: lib.rs  main.rs
src/helper/: date_to_string.rs  mod.rs
src/jsonwebtoken/: jwt.rs
src/middleware/: guard.rs
src/models/: categories.rs  doas.rs  faqs.rs  historical_sites.rs  home_sliders.rs  mod.rs  news.rs  response.rs  users.rs  waktu_solat.rs
src/routes/: doas_handler.rs  faqs_handler.rs  historical_sites_handler.rs  home_slider_handler.rs  mod.rs  news_handler.rs  slider_handler.rs  user_handler.rs  waktu_solat_handler.rs
