[package]
name = "umrah_haji"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] } # for `axum::headers::authorization::Bearer`
bcrypt = "0.16.0"
chrono = "0.4.39"
chrono-tz = "0.10.1"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
jsonwebtoken = "9.3.0"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
